...
                          ),
                        );
                      },
                    ),
                    const SizedBox(height: 16),
                    const Text(
                      'الإعدادات',
                      style: TextStyle(
                        fontFamily: 'Cairo',
                        fontSize: 26,
                        fontWeight: FontWeight.bold,
                        color: Colors.white,
                        letterSpacing: 0.5,
...
